# cmake-manager

./: CMakeLists.txt  Makefile
include/: cli.hpp  config.hpp  exec.hpp  project.hpp
src/: cli.cpp  config.cpp  exec.cpp  main.cpp
